# production-support-agent-lab

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  design-qa.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/prometheus/: prometheus.yml  support-agent-alerts.yml
docs/: alerting-runbook.md  annotated-trace.md  architecture.md  evaluation-monitoring.md  frontend-console.md  github-research.md  intent-playbook.md  mcp-tools.md  memory-playbook.md  product-design-brief.md  production-deployment.md  production-hardening.md  retrieval-playbook.md  tool-failure-playbook.md  trace-walkthrough.md
examples/evals/: golden_core.json  memory_multiturn_regression.json  monitor_regression.json  security_regression.json  tool_failure_regression.json
examples/knowledge/: policies.md
frontend/: middleware.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  page.tsx
frontend/test/: consoleState.test.ts  eventStoreOpsRoute.test.ts  (+10 more)
scripts/: demo_chat.py  run_alert_dispatcher.py  run_eval.py  run_monitor_eval.py  run_release_check.py
tests/: test_alert_dispatcher.py  test_alert_dispatcher_worker.py  test_api_auth.py  test_eval_runner.py  test_event_store.py  test_http_business_tools.py  test_http_knowledge.py  test_llm_gateway.py  test_mcp_adapter.py  test_memory.py  test_metrics.py  test_monitor_review_worker.py  test_monitoring.py  test_orchestrator.py  test_production_config.py  test_prometheus_alert_rules.py  test_readiness.py  test_release_check.py  test_sqlite_knowledge.py  test_tools.py  test_tracing.py
(+68 files in other folders)
