[project]
name = "production-support-agent-lab"
version = "0.1.0"
description = "A production-shaped customer support agent lab for backend engineers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]
mcp = [
  "mcp>=1.0.0",
]

[project.scripts]
support-agent-eval = "support_agent_lab.evals.runner:main"
support-agent-demo = "support_agent_lab.scripts.demo_chat:main"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
